resources/openshift/nginx.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  type: NodePort
  selector:
    name: nginx
  ports:
    - port: 80
      targetPort: 8080
      name: http
    - port: 8443
      targetPort: 8443
      name: https-admin
---
apiVersion: v1
kind: Route
metadata:
  name: openwhisk
  labels:
    name: nginx
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: nginx
    spec:
      restartPolicy: Always
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx
      - name: logs
        emptyDir: {}
      containers:
      - name: nginx
        imagePullPolicy: IfNotPresent
        image: projectodd/whisk_nginx:openshift-latest
        ports:
        - name: http
          containerPort: 8080
        - name: https-admin
          containerPort: 8443
        volumeMounts:
        - name: nginx-conf
          mountPath: "/etc/nginx/nginx.conf"
          subPath: "nginx.conf"
        - name: logs
          mountPath: "/logs"
